// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary component with 0 expenses 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling: 
    $0.00
  </h1>
</div>
`;

exports[`Should correctly render ExpensesSummary component with 1 expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling: 
    $1.23
  </h1>
</div>
`;

exports[`Should correctly render ExpensesSummary component with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling: 
    $1,234,567.89
  </h1>
</div>
`;
